--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -95,6 +95,9 @@
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <a href="{% url 'wishlist:add_to_wishlist' product.id %}"class="btn wishlist-btn rounded-0 text-uppercase mt-5">
+                                    <i class="fa-solid fa-heart"></i> Add to Wishlist
+                                </a>
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
