--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,6 +95,16 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+.wishlist-btn{
+    color: #ff1493;
+}
+
+.wishlist-product{
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
