add remove from wishlist

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,14 @@
                             {% endif %}
                         </div>
                     </li>
+                    <li class="list-inline-item">
+                        <a href="{% url 'wishlist:view_wishlist' %}" class="text-danger">
+                            <div class="text-center">
+                                <div><i class="fa-solid fa-heart"></i></div>
+                                <p class="my-0">Wishlist</p>
+                            </div>
+                        </a>
+                    </li>
                     <!-- Shopping Bag -->
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
