--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,6 +95,8 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* ------------------------------- wishList */
+
 .wishlist-btn{
     color: #ff1493;
 }
@@ -103,6 +105,23 @@ a.category-badge > span.badge:hover {
     width: 100%;
     height: 100%;
     overflow-y: auto;
+}
+
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
 }
 
 /* -------------------------------- Media Queries */
